# spritely_ai

./: .env.example  .gitignore  README.md  dev.ipynb  gui.py  hey_spritely.py  install_shortcut.sh  instant_spritely.py  invoke_llm.py  mac_mic.py  main.py  main.sh  prompts.py  pyproject.toml  requirements.txt  settings.json  start_transcription.sh  transcribe_field.py  transcribe_meeting.py  transcribe_terminal.py  transcription_20250112_001247.json  user_settings.py
backend/: dev.ipynb  start_transcription.sh  transcribe_field.py  transcription_20250112_001901.json
frontend/app/: page.tsx
frontend/components/layout/: navbar.tsx
meetings/: meeting_20250116_023846.txt  meeting_20250116_030558.txt  meeting_20250116_173844.txt
meetings/json/: transcription_20250116_022445.json  transcription_20250116_023846.json  transcription_20250116_030558.json  transcription_20250118_015833.json  transcription_20250118_020316.json  transcription_20250118_020534.json  transcription_20250118_021111.json  transcription_20250118_021222.json  transcription_20250118_033908.json  transcription_20250118_040136.json  transcription_20250118_040728.json  transcription_20250118_040757.json  transcription_20250118_041408.json  transcription_20250118_041544.json  transcription_20250121_155919.json  transcription_20250121_161144.json
scripts/: build_macos.py  install.sh
src/spritely/: __init__.py
src/spritely/core/: ai_summarise.py  browser.py  config.py  invoke_llm.py  tools.py  transcribe_field.py  transcribe_meeting.py  tts_post.py
utils/: audio_utils.py  logging_config.py
(+21 files in other folders)
